clusters/9ka/monitoring/content/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: alertmanager.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
  - host: alertmanager.9ka.nl
    http:
      paths:
      - backend:
          service:
            name: alertmanager-operated
            port:
              name: web
        path: /
        pathType: Prefix
